Update README. Add comments to source files.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </table>
     <div class="item-bin left">
       <div class="item hover">
-        <h2>&#35;25239</h2>
+        <h2>&#35;25239</h2><!-- Key number goes in here -->
       </div>
       <div class="item hover">
         <h2>&#35;32311</h2>
